--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -3,6 +3,7 @@
     color: #fff;
     padding: 20px;
     overflow: auto;
+    position: relative;
     z-index: 1000;
 }
 
