--- a/frontend/src/components/Line/Line.css
+++ b/frontend/src/components/Line/Line.css
@@ -18,7 +18,8 @@
     display: flex;
     padding: 2vw 0;
     overflow: hidden;
-    z-index: 10000;
+    position: relative;
+    z-index: 1;
 }
 
 .marque {
